<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hit.or_oded.facility_manager.committee_activities.CommitteeMenuActivity">

    <TextView
        android:id="@+id/textViewTitle"
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/comeetieeMenuTitle" />

    <Button
        android:id="@+id/buttonShowTenantMonthPaid"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:gravity="center"
        android:onClick="buttonShowTenantMonthPaid_clicked"
        android:text="@string/getTenantMonthsPaid" />

    <Button
        android:id="@+id/buttonShowApartmentPayments"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:gravity="center"
        android:onClick="buttonShowApartmentPayments_clicked"
        android:text="@string/getApartmentsMonthsPaid" />

    <Button
        android:id="@+id/buttonAddTenantPayment"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:gravity="center"
        android:onClick="buttonAddTenantPayment_clicked"
        android:text="@string/addTennantMonthPayment" />

    <Button
        android:id="@+id/buttonShowApartmentMonthlyPayments"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:gravity="center"
        android:onClick="buttonShowApartmentMonthlyPayments_clicked"
        android:text="@string/getParatmentsPayments" />

    <Button
        android:id="@+id/buttonShowProviders"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:gravity="center"
        android:onClick="buttonShowProviders_clicked"
        android:text="@string/getProviders" />

    <Button
        android:id="@+id/buttonFindOptimalProvider"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:gravity="center"
        android:onClick="buttonFindOptimalProvider_clicked"
        android:text="@string/getOptimalProvider" />

    <Button
        android:id="@+id/buttonAddOrUpdateProvider"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:gravity="center"
        android:onClick="buttonAddOrUpdateProvider_clicked"
        android:text="@string/enterProviderDetails" />
</LinearLayout>