<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hit.or_oded.facility_manager.committee_activities.AddNewProviderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextProviderId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/user_name"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="30dp" />

        <EditText
            android:id="@+id/editTextProviderFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:hint="@string/first_name"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@+id/editTextProviderId"
            tools:layout_editor_absoluteX="16dp" />

        <EditText
            android:id="@+id/editTextProviderLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:hint="@string/last_name"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@+id/editTextProviderFirstName"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/editTextAvailability"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:hint="@string/availability"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@+id/editTextProviderLastName"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/editTextQuality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal"
            android:hint="@string/quality"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@+id/editTextAvailability"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/editTextPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:hint="@string/price"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@+id/editTextQuality"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:hint="@string/phone"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPrice"
            tools:layout_editor_absoluteX="0dp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.029"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/radioButtonCleaning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cleaning" />

            <RadioButton
                android:id="@+id/radioButtonGardening"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gardening" />

            <RadioButton
                android:id="@+id/radioButtonPlumbing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plumbing" />

            <RadioButton
                android:id="@+id/radioButtonElectrics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/electrics" />
        </RadioGroup>
    </LinearLayout>


    <Button
        android:id="@+id/buttonOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="buttonOK_clicked"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonCancel"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="64dp"
        android:onClick="buttonCancel_clicked"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>
